Change preferred browser back to regular firefox.
Change browser back to firefox.
Bug with .xsession.errors should be fixed in 125.01.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -19,7 +19,7 @@ set $term wezterm
 # Your preferred application launcher
 set $menu yofi
 
-set $browser firefox-nightly
+set $browser firefox
 
 set $crimson #dc143c
 set $maincolour $crimson
