Completely restyle waybar, change colours.

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -22,17 +22,19 @@ set $menu yofi
 set $browser firefox
 
 set $crimson #dc143c
-set $maincolour $crimson
+set $seagreen #2e8b57
+set $mediumseagreen #3cb371
+set $primarycolour $seagreen
 
 # Change appearance
-output * bg /home/moose/Pictures/DesktopBackgrounds/trinityImageSOS.jpg fill
+output * bg /home/moose/Pictures/DesktopBackgrounds/chihiro041.jpg fill
 gaps inner 5
 
 default_border pixel 1
 default_floating_border pixel 1
 
-client.focused #000000 $maincolour #000000
-client.unfocused #000000 #000000 $maincolour
+client.focused #000000 $primarycolour #000000
+client.unfocused #000000 #000000 $primarycolour
 
 for_window [app_id="nemo"] opacity 0.8
 font InconsolataNerdFontMono Bold 10
