--- a/.config/sway/config
+++ b/.config/sway/config
@@ -24,8 +24,10 @@ set $browser firefox
 set $crimson #dc143c
 set $seagreen #2e8b57
 set $mediumseagreen #3cb371
+set $ghostwhite #f8f8ff
 set $primarycolour $seagreen
 set $secondarycolour $mediumseagreen
+set $textcolour $ghostwhite
 
 # Change appearance
 output * bg /home/moose/Pictures/DesktopBackgrounds/chihiro041.jpg fill
@@ -34,8 +36,8 @@ gaps inner 5
 default_border pixel 2
 default_floating_border pixel 1
 
-client.focused #000000 $secondarycolour #000000
-client.unfocused #000000 #000000 #000000
+client.focused #000000 $secondarycolour $textcolour
+client.unfocused #000000 #000000 $textcolour
 
 for_window [app_id="nemo"] opacity 0.8
 font InconsolataNerdFontMono Bold 10
@@ -80,6 +82,9 @@ output eDP-1 pos 0 1080
 
     bindsym XF86MonBrightnessUp exec light -A 5%
     bindsym XF86MonBrightnessDown exec light -U 5%
+
+	bindsym $mod+Shift+s exec "grimshot save output"
+	# bindsym $mod+Shift+s exec "grimshot -g $(slurp)"
 
 	# bindsym XF86
 
