--- a/.config/sway/config
+++ b/.config/sway/config
@@ -42,6 +42,8 @@ client.unfocused #000000 #000000 $textcolour
 for_window [app_id="nemo"] opacity 0.8
 font InconsolataNerdFontMono Bold 10
 
+for_window [app_id="Zotero" title="Quick Format Citation"] floating enable
+
 # Set proper display res
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 output DP-1 mode 1920x1080@119.880Hz pos 0 0
