Change yofi icon config.

--- a/.config/yofi/yofi.config
+++ b/.config/yofi/yofi.config
@@ -76,7 +76,7 @@ icon_spacing = 5
 size = 24
 
 # For the icon search path, by default "hicolor" is used which usually not what you want.
-theme = "Fluent-dark"
+theme = "Mint-Y"
 
 # If no icon found for an entry, this one will be used instead
 fallback_icon_path = "/usr/share/icons/Adwaita/16x16/categories/applications-engineering-symbolic.symbolic.png"
