--- a/.config/sway/config
+++ b/.config/sway/config
@@ -45,8 +45,9 @@ for_window [app_id="Zotero" title="Quick Format Citation"] floating enable
 
 # Set proper display res
 # You can get the names of your outputs by running: swaymsg -t get_outputs
-output DP-1 mode 1920x1080@119.880Hz pos 0 0
-output eDP-1 pos 0 1080
+# output DP-1 mode 1920x1080@119.880Hz pos 0 0
+output HDMI-A-1 mode 3840x2160@119.880Hz pos 0 0 scale 2
+output eDP-1 pos -3840 0
 
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -98,7 +99,6 @@ output eDP-1 pos 0 1080
 
     # reload the configuration file
     bindsym $mod+Shift+c reload
-
     # exit sway (logs you out of your wayland session)
     bindsym $mod+Shift+e exit
 #
